# ising

./: .envrc  .gitignore  CMakeLists.txt  README  imgui.ini
.nix/: flake.nix
resources/shaders/: triangles.frag  triangles.vert
src/: CMakeLists.txt  main.c  main.cpp  main.h  shader.cpp  shader.h  utils.c  utils.h  window.cpp  window.hpp
